--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-push (1.4.3+ubports) vivid; urgency=medium
+
+  * Imported to UBports
+  * Add Jenkinsfile
+
+-- Dan Chapman <dpniel@ubuntu.com> Thu, 14 Dec 2017 12:58:55 +0000
+
 libertine (1.4.2+16.10.20161005-0ubuntu1) yakkety; urgency=medium
 
   [ Chris Townsend ]
